--- a/app.css
+++ b/app.css
@@ -1,42 +1,71 @@
-* {outline: 1px solid red;}
+:root {
+  font-size: 16px;
+  --monospace: 'Montserrat', Monaco, monospace;
+  --light-purple: #791f87;
+  --dark-purple: #55165e;
+  --light-green: #7a871f;
+  --dark-green: #565e16;
+  --cotton-candy: #f9ceff;
+}
 
-:root {}
+body {
+  background-color: var(--dark-purple);
+  color: var(--cotton-candy);
+  font-size: 1rem;
+}
 
-/* section {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 2rem;
-} */
+h1 {
+  font-size: 3em;
+  font-family: var(--monospace);
+}
+p {font-size: 1.5em;}
+
+.hidden {
+  display: none !important;
+}
 
 .btn-container {
   display: flex;
   justify-content: center;
+  margin-bottom: 2rem;
 }
 .btn {
   margin-left: 2rem;
+  font-family: var(--monospace);
 }
 .btn:first-child {
   margin-left: 0;
+}
+.btn:disabled {
+  color: darkslategrey;
+  background-color: grey;
+  opacity: 0.5;
+}
+.btn:disabled:hover {
+  color: darkslategrey;
+  background-color: grey;
 }
 a.btn, button.btn {
   display: inline-block; /* necessary for the <a> */
   padding: 1rem;
   width: 120px;
   text-align: center;
+  color: var(--cotton-candy);
 }
 
-/* change these colors later */
-a.btn             {color: black; background-color: red; text-decoration: none;}
-a.btn:visited     {color: black; background-color: red;}
-a.btn:hover       {color: black; background-color: yellow;}
-a.btn:active      {color: black; background-color: green;}
-button.btn        {color: black; background-color: red;}
-button.btn:hover  {color: black; background-color: yellow;}
-/* button.btn:active {} */
+a.btn             {background-color: var(--dark-green); text-decoration: none;}
+a.btn:visited     {background-color: var(--dark-green);}
+a.btn:hover       {background-color: var(--light-green);}
+a.btn:active      {background-color: var(--light-green);}
+button.btn        {background-color: var(--dark-green);}
+button.btn:hover  {background-color: var(--light-green);}
 
 .list-style-none {list-style: none;}
 
-header.app-header .flex-container {align-items: center;}
+header.app-header.flex-container {
+  align-items: center;
+  justify-content: center;
+}
 
 header.app-header {
   margin: 0 auto;
@@ -44,13 +73,19 @@ header.app-header {
   text-align: center;
 }
 
-.quiz-session-details {}
+.js-question-feedback {
+  min-height: 2rem;
+  text-align: center;
+}
 
 .quiz-progress, .quiz-score {margin: auto;}
 
-.quiz-progress {}
-
-.quiz-score {}
+.quiz-score {
+  padding: 0rem 0 3rem;
+  text-align: center;
+  font-size: 1.5em;
+  font-family: var(--monospace);
+}
 
 main {
   display: flex;
@@ -59,33 +94,39 @@ main {
 }
 
 .start-screen, .quiz-screen, .end-screen {
-  max-width: 720px; /* keep it tight and focused */
-  /* margin-top: 1rem; */
-  padding: 2rem;
+  padding: 0 2rem;
 }
 
-.start-screen {}
+.start-screen iframe.giphy-embed {
+  width: 100%;
+  height: 200px;
+  margin: 0 auto;
+}
 
-.quiz-screen {}
+.start-screen p, .end-screen p {
+  margin: 3rem auto;
+  text-align: center;
+}
 
 .quiz-screen fieldset {
-  margin-bottom: 2rem;
+  max-width: 600px;
+  margin: 0 auto 2rem;
   padding: 1rem;
+  background-color: rgba(0,0,0,0.3);
+}
+
+.quiz-screen fieldset > div {
+  margin: 0.5rem;
 }
 
 .quiz-screen legend {
   text-align: center;
+  font-family: var(--monospace);
 }
 
-.quiz-screen form input[type=radio] {}
-
-.quiz-screen form label {}
-
-.questionFeedback {
-  visibility: hidden; /* initial state */
+.quiz-screen form label {
+  font-size: 1.2rem;
 }
-
-.end-screen {}
 
 /****************************************
 FLEXBOX styles
